[package]
name = "balz"
version = "0.1.0"
authors = ["Dean De Carli <neaddean@gmail.com>"]
edition = "2018"

#default-run = "main"

[dependencies]
rand = "0.8.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
num = "0.3.1"
itertools = "0.10.0"
ncollide3d   = "0.27.0"
nalgebra = "0.24.0"
kiss3d = "0.29.0"
